# SlicerOsirix

./: CMakeLists.txt  README.md
OsirixLib/: CMakeLists.txt  qSlicerOsirixLibModule.cxx  qSlicerOsirixLibModule.h  qSlicerOsirixLibModuleWidget.cxx  qSlicerOsirixLibModuleWidget.h
OsirixLib/Logic/: vtkSlicerOsirixLibLogic.cxx  vtkSlicerOsirixLibLogic.h
OsirixLib/Resources/: qSlicerOsirixLibModule.qrc
OsirixLib/Resources/UI/: qSlicerOsirixLibModuleWidget.ui
OsirixROIImporter/: CMakeLists.txt  qSlicerOsirixROIImporterModule.cxx  qSlicerOsirixROIImporterModule.h  qSlicerOsirixROIImporterModuleWidget.cxx  qSlicerOsirixROIImporterModuleWidget.h
OsirixROIImporter/Logic/: CMakeLists.txt  vtkSlicerOsirixROIImporterLogic.cxx  vtkSlicerOsirixROIImporterLogic.h
OsirixROIImporter/Resources/: qSlicerOsirixROIImporterModule.qrc
OsirixROIImporter/Resources/UI/: qSlicerOsirixROIImporterModuleWidget.ui
